fixed overflow-x issue on about page

--- a/src/components/About/index.scss
+++ b/src/components/About/index.scss
@@ -108,4 +108,7 @@
   .stage-cube-cont {
     display: none !important;
   }
+  .container.about-page {
+    overflow-x: hidden;
+  }
 }
